Remove some cruft